# swift-proxy

./: .dockerignore  .zuul.yaml  Dockerfile  README.rst  requirements.txt  setup.cfg  tox.ini
doc/: requirements.txt
doc/source/: conf.py  index.rst
releasenotes/notes/: init-e95fc214a3192ac4.yaml
releasenotes/source/: conf.py  index.rst
swift_proxy/: app.py  wsgi.py
