[metadata]
name = swift-proxy
summary = Tiny proxy to access not publicly accessible files in Swift via standalone process
description_file =
    README.rst
author = OpenTelekomCloud
home_page = https://docs.otc-service.com/swift-proxy
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
python_requires = >=3.6

[files]
packages = find:
include_package_data = true
